Crash/infinite loop from missing cyclic check in group/dupligroups (unlikely/intentional) #29616

Closed
opened 2011-12-13 19:57:19 +01:00 by Danny McGrath · 4 comments
Member

%%%Using Ubuntu 64 10.10 r42608.

Steps to reproduce:

  • add cube to new group called "Group"
  • enable dupligroup
  • add same cube to second group "Group.001"
  • alt+d the cube to "Cube.001"
  • remove "Cube" from group "Group.001" and set its dupligroup to "Group.001"
  • readd "Cube" to "Group.001" (allows it this time despite being dupligroup member)
  • alt+d to make another invalid instance --> crash

From what I can tell, alt+d or adding groups should double check that any group you are adding it to isn't making a cyclic. There are cyclic checks that output in the console for most accidental clicks for groups, so just seems to be a near impossible/rare edge case here. I attached a backtrace, but it seems to just go until it exhausts the stack, but here is the first few lines:

Thread 1 (Thread 0x7ffff7fb1820 (LWP 13976)):

0 eulO_to_mat3 (M=0x7fffff5ff050, e=0x7fffe97bdc10, order=1)

  at /home/dan/blender-build/trunk/source/blender/blenlib/intern/math_rotation.c:1210

1 0x0000000000c78697 in object_rot_to_mat3 (ob=0x7fffe97bda38, mat=0x7fffff5ff0c0)

  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:1460

2 0x0000000000c78789 in object_to_mat3 (ob=0x7fffe97bda38, mat=0x7fffff5ff150)

  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:1625

3 0x0000000000c787e1 in object_to_mat4 (ob=0x7fffff5ff050, mat=0x7fffe97bdc68)

  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:1633

4 0x0000000000c79622 in where_is_object_time (scene=0x7fffede8e038, ob=0x7fffe97bda38,

  ctime=<value optimized out>)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:1958

5 0x0000000000c798d3 in object_handle_update (scene=0x7fffede8e038, ob=0x7fffe97bda38)

  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:2524

6 0x0000000000c3b60c in group_handle_recalc_and_update (scene=0x7fffede8e038,

  UNUSED_parent=<value optimized out>, group=0x1)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/group.c:383

7 0x0000000000bd58eb in group_duplilist (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38,

  duplilist=0x7fffe93689a8, par_space_mat=0x0, level=0, animated=0)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:718

8 object_duplilist_recursive (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38,

  duplilist=0x7fffe93689a8, par_space_mat=0x0, level=0, animated=0)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1594

9 0x0000000000bd5bea in object_duplilist (sce=0x7fffede8e038, ob=0x7fffe97bda38)

  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1610

10 0x0000000000ca0a33 in BKE_ptcache_ids_from_object (lb=0x7fffff5ff9a0, ob=0x7fffe97bda38,

  scene=0x7fffede8e038, duplis=7)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/pointcache.c:1010

11 0x0000000000c799e3 in object_handle_update (scene=0x7fffede8e038, ob=0x7fffe97bda38)

  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:2635

12 0x0000000000c3b60c in group_handle_recalc_and_update (scene=0x7fffede8e038,

  UNUSED_parent=<value optimized out>, group=0x1)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/group.c:383

13 0x0000000000bd58eb in group_duplilist (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38,

  duplilist=0x7fffe9368958, par_space_mat=0x0, level=0, animated=0)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:718

14 object_duplilist_recursive (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38,

  duplilist=0x7fffe9368958, par_space_mat=0x0, level=0, animated=0)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1594

15 0x0000000000bd5bea in object_duplilist (sce=0x7fffede8e038, ob=0x7fffe97bda38)

  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1610

16 0x0000000000ca0a33 in BKE_ptcache_ids_from_object (lb=0x7fffff5ffbe0, ob=0x7fffe97bda38,

  scene=0x7fffede8e038, duplis=7)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/pointcache.c:1010

17 0x0000000000c799e3 in object_handle_update (scene=0x7fffede8e038, ob=0x7fffe97bda38)

  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:2635

18 0x0000000000c3b60c in group_handle_recalc_and_update (scene=0x7fffede8e038,

  UNUSED_parent=<value optimized out>, group=0x1)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/group.c:383

19 0x0000000000bd58eb in group_duplilist (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38,

  duplilist=0x7fffe9368908, par_space_mat=0x0, level=0, animated=0)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:718

20 object_duplilist_recursive (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38,

  duplilist=0x7fffe9368908, par_space_mat=0x0, level=0, animated=0)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1594

21 0x0000000000bd5bea in object_duplilist (sce=0x7fffede8e038, ob=0x7fffe97bda38)

  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1610

22 0x0000000000ca0a33 in BKE_ptcache_ids_from_object (lb=0x7fffff5ffe20, ob=0x7fffe97bda38,

  scene=0x7fffede8e038, duplis=7)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/pointcache.c:1010

23 0x0000000000c799e3 in object_handle_update (scene=0x7fffede8e038, ob=0x7fffe97bda38)

  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:2635

24 0x0000000000c3b60c in group_handle_recalc_and_update (scene=0x7fffede8e038,

  UNUSED_parent=<value optimized out>, group=0x1)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/group.c:383

25 0x0000000000bd58eb in group_duplilist (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38,

  duplilist=0x7fffe93688b8, par_space_mat=0x0, level=0, animated=0)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:718

26 object_duplilist_recursive (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38,

  duplilist=0x7fffe93688b8, par_space_mat=0x0, level=0, animated=0)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1594

27 0x0000000000bd5bea in object_duplilist (sce=0x7fffede8e038, ob=0x7fffe97bda38)

  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1610

28 0x0000000000ca0a33 in BKE_ptcache_ids_from_object (lb=0x7fffff600060, ob=0x7fffe97bda38,

  scene=0x7fffede8e038, duplis=7)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/pointcache.c:1010

29 0x0000000000c799e3 in object_handle_update (scene=0x7fffede8e038, ob=0x7fffe97bda38)

  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:2635

30 0x0000000000c3b60c in group_handle_recalc_and_update (scene=0x7fffede8e038,

  UNUSED_parent=<value optimized out>, group=0x1)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/group.c:383

31 0x0000000000bd58eb in group_duplilist (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38,

  duplilist=0x7fffe9368868, par_space_mat=0x0, level=0, animated=0)
  at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:718

32 object_duplilist_recursive (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38,

  duplilist=0x7fffe9368868, par_space_mat=0x0, level=0, animated=0)

(repeats forever, at least until stack exhausted)%%%

%%%Using Ubuntu 64 10.10 r42608. Steps to reproduce: - add cube to new group called "Group" - enable dupligroup - add same cube to second group "Group.001" - alt+d the cube to "Cube.001" - remove "Cube" from group "Group.001" and set its dupligroup to "Group.001" - readd "Cube" to "Group.001" (allows it this time despite being dupligroup member) - alt+d to make another invalid instance --> crash From what I can tell, alt+d or adding groups should double check that any group you are adding it to isn't making a cyclic. There are cyclic checks that output in the console for most accidental clicks for groups, so just seems to be a near impossible/rare edge case here. I attached a backtrace, but it seems to just go until it exhausts the stack, but here is the first few lines: Thread 1 (Thread 0x7ffff7fb1820 (LWP 13976)): # 0 eulO_to_mat3 (M=0x7fffff5ff050, e=0x7fffe97bdc10, order=1) ``` at /home/dan/blender-build/trunk/source/blender/blenlib/intern/math_rotation.c:1210 ``` # 1 0x0000000000c78697 in object_rot_to_mat3 (ob=0x7fffe97bda38, mat=0x7fffff5ff0c0) ``` at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:1460 ``` # 2 0x0000000000c78789 in object_to_mat3 (ob=0x7fffe97bda38, mat=0x7fffff5ff150) ``` at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:1625 ``` # 3 0x0000000000c787e1 in object_to_mat4 (ob=0x7fffff5ff050, mat=0x7fffe97bdc68) ``` at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:1633 ``` # 4 0x0000000000c79622 in where_is_object_time (scene=0x7fffede8e038, ob=0x7fffe97bda38, ``` ctime=<value optimized out>) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:1958 ``` # 5 0x0000000000c798d3 in object_handle_update (scene=0x7fffede8e038, ob=0x7fffe97bda38) ``` at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:2524 ``` # 6 0x0000000000c3b60c in group_handle_recalc_and_update (scene=0x7fffede8e038, ``` UNUSED_parent=<value optimized out>, group=0x1) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/group.c:383 ``` # 7 0x0000000000bd58eb in group_duplilist (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38, ``` duplilist=0x7fffe93689a8, par_space_mat=0x0, level=0, animated=0) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:718 ``` # 8 object_duplilist_recursive (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38, ``` duplilist=0x7fffe93689a8, par_space_mat=0x0, level=0, animated=0) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1594 ``` # 9 0x0000000000bd5bea in object_duplilist (sce=0x7fffede8e038, ob=0x7fffe97bda38) ``` at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1610 ``` # 10 0x0000000000ca0a33 in BKE_ptcache_ids_from_object (lb=0x7fffff5ff9a0, ob=0x7fffe97bda38, ``` scene=0x7fffede8e038, duplis=7) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/pointcache.c:1010 ``` # 11 0x0000000000c799e3 in object_handle_update (scene=0x7fffede8e038, ob=0x7fffe97bda38) ``` at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:2635 ``` # 12 0x0000000000c3b60c in group_handle_recalc_and_update (scene=0x7fffede8e038, ``` UNUSED_parent=<value optimized out>, group=0x1) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/group.c:383 ``` # 13 0x0000000000bd58eb in group_duplilist (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38, ``` duplilist=0x7fffe9368958, par_space_mat=0x0, level=0, animated=0) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:718 ``` # 14 object_duplilist_recursive (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38, ``` duplilist=0x7fffe9368958, par_space_mat=0x0, level=0, animated=0) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1594 ``` # 15 0x0000000000bd5bea in object_duplilist (sce=0x7fffede8e038, ob=0x7fffe97bda38) ``` at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1610 ``` # 16 0x0000000000ca0a33 in BKE_ptcache_ids_from_object (lb=0x7fffff5ffbe0, ob=0x7fffe97bda38, ``` scene=0x7fffede8e038, duplis=7) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/pointcache.c:1010 ``` # 17 0x0000000000c799e3 in object_handle_update (scene=0x7fffede8e038, ob=0x7fffe97bda38) ``` at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:2635 ``` # 18 0x0000000000c3b60c in group_handle_recalc_and_update (scene=0x7fffede8e038, ``` UNUSED_parent=<value optimized out>, group=0x1) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/group.c:383 ``` # 19 0x0000000000bd58eb in group_duplilist (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38, ``` duplilist=0x7fffe9368908, par_space_mat=0x0, level=0, animated=0) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:718 ``` # 20 object_duplilist_recursive (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38, ``` duplilist=0x7fffe9368908, par_space_mat=0x0, level=0, animated=0) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1594 ``` # 21 0x0000000000bd5bea in object_duplilist (sce=0x7fffede8e038, ob=0x7fffe97bda38) ``` at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1610 ``` # 22 0x0000000000ca0a33 in BKE_ptcache_ids_from_object (lb=0x7fffff5ffe20, ob=0x7fffe97bda38, ``` scene=0x7fffede8e038, duplis=7) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/pointcache.c:1010 ``` # 23 0x0000000000c799e3 in object_handle_update (scene=0x7fffede8e038, ob=0x7fffe97bda38) ``` at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:2635 ``` # 24 0x0000000000c3b60c in group_handle_recalc_and_update (scene=0x7fffede8e038, ``` UNUSED_parent=<value optimized out>, group=0x1) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/group.c:383 ``` # 25 0x0000000000bd58eb in group_duplilist (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38, ``` duplilist=0x7fffe93688b8, par_space_mat=0x0, level=0, animated=0) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:718 ``` # 26 object_duplilist_recursive (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38, ``` duplilist=0x7fffe93688b8, par_space_mat=0x0, level=0, animated=0) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1594 ``` # 27 0x0000000000bd5bea in object_duplilist (sce=0x7fffede8e038, ob=0x7fffe97bda38) ``` at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:1610 ``` # 28 0x0000000000ca0a33 in BKE_ptcache_ids_from_object (lb=0x7fffff600060, ob=0x7fffe97bda38, ``` scene=0x7fffede8e038, duplis=7) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/pointcache.c:1010 ``` # 29 0x0000000000c799e3 in object_handle_update (scene=0x7fffede8e038, ob=0x7fffe97bda38) ``` at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/object.c:2635 ``` # 30 0x0000000000c3b60c in group_handle_recalc_and_update (scene=0x7fffede8e038, ``` UNUSED_parent=<value optimized out>, group=0x1) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/group.c:383 ``` # 31 0x0000000000bd58eb in group_duplilist (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38, ``` duplilist=0x7fffe9368868, par_space_mat=0x0, level=0, animated=0) at /home/dan/blender-build/trunk/source/blender/blenkernel/intern/anim.c:718 ``` # 32 object_duplilist_recursive (id=0x7fffede8e038, scene=0x7fffede8e038, ob=0x7fffe97bda38, ``` duplilist=0x7fffe9368868, par_space_mat=0x0, level=0, animated=0) ``` (repeats forever, at least until stack exhausted)%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Looked into this, its not so easy to solve, we could...

  • flag groups being calculated so as not to re-calculate recursively (most efficient)
  • add a levels argument to object_handle_update(), less efficient because it can still hit the same group multiple times, just wont call forever.
  • try to disallow this situation to happen in the first place, this is easy to do, but weak and doesn't disallow it to happen in many other cases.

also - since this is the day of 2.61 release, don't think this is a show stopper.%%%

%%%Looked into this, its not so easy to solve, we could... * flag groups being calculated so as not to re-calculate recursively (most efficient) * add a levels argument to object_handle_update(), less efficient because it can still hit the same group multiple times, just wont call forever. * try to disallow this situation to happen in the first place, this is easy to do, but weak and doesn't disallow it to happen in many other cases. also - since this is the day of 2.61 release, don't think this is a show stopper.%%%

%%%fixed r50525.%%%

%%%fixed r50525.%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29616
No description provided.